// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyze basic directory 1`] = `
Object {
  "componentTotal": 1,
  "componentUsage": Object {
    "div": 1,
  },
  "componentUsageTotal": 1,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "main.js",
  ],
  "lineUsage": Object {
    "div": Object {
      "a": Array [
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 1,
          },
          "filename": "main.js",
          "prettyCode": "   1 | <div a b c />;",
          "propCode": "a",
          "propValue": true,
          "startLoc": Position {
            "column": 5,
            "line": 1,
          },
        },
      ],
      "b": Array [
        Object {
          "endLoc": Position {
            "column": 8,
            "line": 1,
          },
          "filename": "main.js",
          "prettyCode": "   1 | <div a b c />;",
          "propCode": "b",
          "propValue": true,
          "startLoc": Position {
            "column": 7,
            "line": 1,
          },
        },
      ],
      "c": Array [
        Object {
          "endLoc": Position {
            "column": 10,
            "line": 1,
          },
          "filename": "main.js",
          "prettyCode": "   1 | <div a b c />;",
          "propCode": "c",
          "propValue": true,
          "startLoc": Position {
            "column": 9,
            "line": 1,
          },
        },
      ],
    },
  },
  "propUsage": Object {
    "div": Object {
      "a": 1,
      "b": 1,
      "c": 1,
    },
  },
  "suggestedPlugins": Array [],
}
`;

exports[`analyze decorators directory 1`] = `
Object {
  "componentTotal": 0,
  "componentUsage": Object {},
  "componentUsageTotal": 0,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {
    "main.js": Object {
      "loc": Position {
        "column": 0,
        "line": 1,
      },
      "message": "This experimental syntax requires enabling one of the following parser plugin(s): 'decorators-legacy, decorators' (1:0)",
      "missingPlugin": Array [
        "decorators-legacy",
        "decorators",
      ],
      "pos": 0,
    },
  },
  "filenames": Array [
    "main.js",
  ],
  "lineUsage": Object {},
  "propUsage": Object {},
  "suggestedPlugins": Array [
    "decorators-legacy",
    "decorators",
  ],
}
`;

exports[`analyze decorators directory with plugin decorators-legacy 1`] = `
Object {
  "componentTotal": 2,
  "componentUsage": Object {
    "App": 1,
    "div": 1,
  },
  "componentUsageTotal": 2,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "main.js",
  ],
  "lineUsage": Object {},
  "propUsage": Object {},
  "suggestedPlugins": Array [],
}
`;

exports[`analyze empty directory 1`] = `
Object {
  "componentTotal": 0,
  "componentUsage": Object {},
  "componentUsageTotal": 0,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [],
  "lineUsage": Object {},
  "propUsage": Object {},
  "suggestedPlugins": Array [],
}
`;

exports[`analyze error directory 1`] = `
Object {
  "componentTotal": 0,
  "componentUsage": Object {},
  "componentUsageTotal": 0,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {
    "main.js": Object {
      "loc": Position {
        "column": 0,
        "line": 2,
      },
      "message": "Unexpected token (2:0)",
      "missingPlugin": undefined,
      "pos": 12,
    },
  },
  "filenames": Array [
    "main.js",
  ],
  "lineUsage": Object {},
  "propUsage": Object {},
  "suggestedPlugins": Array [],
}
`;

exports[`analyze line-report directory 1`] = `
Object {
  "componentTotal": 1,
  "componentUsage": Object {
    "div": 5,
  },
  "componentUsageTotal": 5,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "main.js",
  ],
  "lineUsage": Object {
    "div": Object {
      "id": Array [
        Object {
          "endLoc": Position {
            "column": 61,
            "line": 6,
          },
          "filename": "main.js",
          "prettyCode": "   6 |       <div className=\\"abc\\" style={{ fontSize: 20 }} id=\\"nice\\" />",
          "propCode": "id=\\"nice\\"",
          "propValue": "nice",
          "startLoc": Position {
            "column": 52,
            "line": 6,
          },
        },
        Object {
          "endLoc": Position {
            "column": 61,
            "line": 7,
          },
          "filename": "main.js",
          "prettyCode": "   7 |       <div className=\\"efg\\" style={{ fontSize: 22 }} id=\\"cool\\" />",
          "propCode": "id=\\"cool\\"",
          "propValue": "cool",
          "startLoc": Position {
            "column": 52,
            "line": 7,
          },
        },
        Object {
          "endLoc": Position {
            "column": 63,
            "line": 9,
          },
          "filename": "main.js",
          "prettyCode": "   9 |       <div className=\\"klm\\" style={{ fontSize: 26 }} id=\\"potato\\" />",
          "propCode": "id=\\"potato\\"",
          "propValue": "potato",
          "startLoc": Position {
            "column": 52,
            "line": 9,
          },
        },
        Object {
          "endLoc": Position {
            "column": 64,
            "line": 10,
          },
          "filename": "main.js",
          "prettyCode": "  10 |       <div className=\\"nop\\" style={{ fontSize: 28 }} id={\\"salad\\"} />",
          "propCode": "id={\\"salad\\"}",
          "propValue": "salad",
          "startLoc": Position {
            "column": 52,
            "line": 10,
          },
        },
      ],
    },
  },
  "propUsage": Object {
    "div": Object {
      "id": 4,
    },
  },
  "suggestedPlugins": Array [],
}
`;

exports[`analyze multiple prop types in prop-usage directory 1`] = `
Object {
  "componentTotal": 1,
  "componentUsage": Object {
    "div": 7,
  },
  "componentUsageTotal": 7,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "multiplePropTypes.js",
  ],
  "lineUsage": Object {
    "div": Object {
      "value": Array [
        Object {
          "endLoc": Position {
            "column": 43,
            "line": 2,
          },
          "filename": "multiplePropTypes.js",
          "prettyCode": "   2 |   <div value=\\"asdfjklasdfjklasdfjklasdfjkl\\" /> {/* string */}",
          "propCode": "value=\\"asdfjklasdfjklasdfjklasdfjkl\\"",
          "propValue": "asdfjklasdfjklasdfjklasdfjkl",
          "startLoc": Position {
            "column": 7,
            "line": 2,
          },
        },
        Object {
          "endLoc": Position {
            "column": 17,
            "line": 3,
          },
          "filename": "multiplePropTypes.js",
          "prettyCode": "   3 |   <div value={10} /> {/* number */}",
          "propCode": "value={10}",
          "propValue": 10,
          "startLoc": Position {
            "column": 7,
            "line": 3,
          },
        },
        Object {
          "endLoc": Position {
            "column": 37,
            "line": 4,
          },
          "filename": "multiplePropTypes.js",
          "prettyCode": "   4 |   <div value={{propKey: 'propValue'}} /> {/* object */}",
          "propCode": "value={{propKey: 'propValue'}}",
          "propValue": Symbol(formatPropValue.EXPRESSION),
          "startLoc": Position {
            "column": 7,
            "line": 4,
          },
        },
        Object {
          "endLoc": Position {
            "column": 12,
            "line": 5,
          },
          "filename": "multiplePropTypes.js",
          "prettyCode": "   5 |   <div value /> {/* boolean */}",
          "propCode": "value",
          "propValue": true,
          "startLoc": Position {
            "column": 7,
            "line": 5,
          },
        },
        Object {
          "endLoc": Position {
            "column": 20,
            "line": 6,
          },
          "filename": "multiplePropTypes.js",
          "prettyCode": "   6 |   <div value={false} /> {/* boolean */}",
          "propCode": "value={false}",
          "propValue": false,
          "startLoc": Position {
            "column": 7,
            "line": 6,
          },
        },
        Object {
          "endLoc": Position {
            "column": 26,
            "line": 7,
          },
          "filename": "multiplePropTypes.js",
          "prettyCode": "   7 |   <div value={\`It works!\`} /> {/* template literal */}",
          "propCode": "value={\`It works!\`}",
          "propValue": Symbol(formatPropValue.EXPRESSION),
          "startLoc": Position {
            "column": 7,
            "line": 7,
          },
        },
        Object {
          "endLoc": Position {
            "column": 28,
            "line": 8,
          },
          "filename": "multiplePropTypes.js",
          "prettyCode": "   8 |   <div value={\`\${10}-hello\`} /> {/* dynamic template literal */}",
          "propCode": "value={\`\${10}-hello\`}",
          "propValue": Symbol(formatPropValue.EXPRESSION),
          "startLoc": Position {
            "column": 7,
            "line": 8,
          },
        },
      ],
    },
  },
  "propUsage": Object {
    "div": Object {
      "value": 7,
    },
  },
  "suggestedPlugins": Array [],
}
`;

exports[`analyze prop-usage directory 1`] = `
Object {
  "componentTotal": 1,
  "componentUsage": Object {
    "div": 15,
  },
  "componentUsageTotal": 15,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "main.js",
    "multiplePropTypes.js",
  ],
  "lineUsage": Object {
    "div": Object {
      "a": Array [
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 1,
          },
          "filename": "main.js",
          "prettyCode": "   1 | <div a />;",
          "propCode": "a",
          "propValue": true,
          "startLoc": Position {
            "column": 5,
            "line": 1,
          },
        },
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 3,
          },
          "filename": "main.js",
          "prettyCode": "   3 | <div a b />;",
          "propCode": "a",
          "propValue": true,
          "startLoc": Position {
            "column": 5,
            "line": 3,
          },
        },
        Object {
          "endLoc": Position {
            "column": 6,
            "line": 4,
          },
          "filename": "main.js",
          "prettyCode": "   4 | <div a b c />;",
          "propCode": "a",
          "propValue": true,
          "startLoc": Position {
            "column": 5,
            "line": 4,
          },
        },
        Object {
          "endLoc": Position {
            "column": 3,
            "line": 12,
          },
          "filename": "main.js",
          "prettyCode": "  12 |   a",
          "propCode": "a",
          "propValue": true,
          "startLoc": Position {
            "column": 2,
            "line": 12,
          },
        },
      ],
    },
  },
  "propUsage": Object {
    "div": Object {
      "a": 4,
    },
  },
  "suggestedPlugins": Array [],
}
`;

exports[`analyze ts directory 1`] = `
Object {
  "componentTotal": 1,
  "componentUsage": Object {
    "div": 1,
  },
  "componentUsageTotal": 1,
  "directory": Any<String>,
  "elapsedTime": Any<Number>,
  "errors": Object {},
  "filenames": Array [
    "main.tsx",
  ],
  "lineUsage": Object {
    "div": Object {
      "typescriptIsCool": Array [
        Object {
          "endLoc": Position {
            "column": 21,
            "line": 1,
          },
          "filename": "main.tsx",
          "prettyCode": "   1 | <div typescriptIsCool />;",
          "propCode": "typescriptIsCool",
          "propValue": true,
          "startLoc": Position {
            "column": 5,
            "line": 1,
          },
        },
      ],
    },
  },
  "propUsage": Object {
    "div": Object {
      "typescriptIsCool": 1,
    },
  },
  "suggestedPlugins": Array [],
}
`;
